--- a/view/includes/searchBar.ejs
+++ b/view/includes/searchBar.ejs
@@ -5,7 +5,7 @@
       <option value="-1">Newer profiles first</option>
       <option value="1">Older profiles first</option>
     </select>
-    <input placeholder="Search classmates" name="q" type="search" id="search" autocomplete="search" class="block w-full min-w-0 border-l-0 flex-grow rounded-none border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" />
+    <input placeholder="Search classmates" name="q" type="search" id="search" autocomplete="search" class="block w-full min-w-0 border-l-0 flex-grow rounded-none border-gray-300 focus:border-secondary-500 focus:ring-secondary-500 sm:text-sm" />
     <button class="bg-primary-700 px-3 cursor-pointer py-1 text-white font-bold rounded-tr-lg rounded-br-lg">Search</button>
   </div>
 </form>
