--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -7,7 +7,7 @@
       <div class="flex items-center space-x-5">
         <div class="flex-shrink-0">
           <div class="relative overflow-hidden rounded-full block">
-            <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `https://robohash.org/${encodeURIComponent(profile.firstName)}.png`) %>" class="h-16 w-16 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+            <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `https://robohash.org/${encodeURIComponent(profile.firstName)}.png`) %>" class="h-16 w-16 rounded-full from-secondary-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
             <span class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></span>
           </div>
         </div>
@@ -141,7 +141,7 @@
                     <% profileOwnerComment = comment.visitorUsername === profile.username %>
                     <div class="flex space-x-3">
                       <p class="flex-shrink-0">
-                        <img loading="lazy" src="<%= comment.photo ? comment.photo : `https://robohash.org/${encodeURIComponent(comment.visitorFirstName)}.png` %>" class="overflow-hidden bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
+                        <img loading="lazy" src="<%= comment.photo ? comment.photo : `https://robohash.org/${encodeURIComponent(comment.visitorFirstName)}.png` %>" class="overflow-hidden bg-gradient-to-r from-secondary-500 via-purple-500 to-pink-500 w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
                       </p>
 
                       <div>
@@ -188,16 +188,16 @@
             <div class="bg-gray-50 px-4 py-6 sm:px-6">
               <div class="flex space-x-3">
                 <div class="flex-shrink-0">
-                  <img loading="lazy" src="<%= user.photo ? user.photo : `https://robohash.org/${encodeURIComponent(user.firstName)}.png` %>" class="overflow-hidden bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
+                  <img loading="lazy" src="<%= user.photo ? user.photo : `https://robohash.org/${encodeURIComponent(user.firstName)}.png` %>" class="overflow-hidden bg-gradient-to-r from-secondary-500 via-purple-500 to-pink-500 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
                 </div>
 
                 <div class="min-w-0 flex-1">
                   <div>
                     <label for="comment" class="sr-only">About</label>
-                    <textarea id="input-comment" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" placeholder="What's on your mind?"></textarea>
+                    <textarea id="input-comment" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-tertiary-500 focus:ring-tertiary-500 sm:text-sm" placeholder="What's on your mind?"></textarea>
                   </div>
                   <div class="mt-3 flex items-center justify-between">
-                    <button id="add-comment-button" data-visitor-email="<%= user.email %>" data-visitor-id="<%= user._id %>" data-contact-email="<%= profile.email %>" class="inline-flex items-center justify-center rounded-md border border-transparent bg-blue-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">Comment</button>
+                    <button id="add-comment-button" data-visitor-email="<%= user.email %>" data-visitor-id="<%= user._id %>" data-contact-email="<%= profile.email %>" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tertiary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tertiary-700 focus:outline-none focus:ring-2 focus:ring-tertiary-500 focus:ring-offset-2">Comment</button>
                   </div>
                 </div>
               </div>
