--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -104,7 +104,7 @@
               <span class="sr-only">Gwarinpa Contact Book</span>
             </div>
             <div class="-mr-2">
-              <button id="close-mobile-menu" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+              <button id="close-mobile-menu" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-secondary-500">
                 <span class="sr-only">Close menu</span>
                 <!-- Heroicon name: outline/x-mark -->
                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
