--- a/view/settings/change-password.ejs
+++ b/view/settings/change-password.ejs
@@ -22,25 +22,25 @@
             <div class="mt-6 grid grid-cols-12 gap-6">
               <div class="col-span-12">
                 <label for="current_password" class="block text-sm font-medium text-gray-700">Current Password <span class="text-red-600">*</span></label>
-                <input type="password" name="old_password" value="" id="current_password" autocomplete="current-password" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
+                <input type="password" name="old_password" value="" id="current_password" autocomplete="current-password" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-secondary-500 focus:outline-none focus:ring-secondary-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
                 <label for="new_password" class="block text-sm font-medium text-gray-700">New Password <span class="text-red-600">*</span></label>
-                <input type="password" name="new_password" value="" id="new_password" autocomplete="new-password" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
+                <input type="password" name="new_password" value="" id="new_password" autocomplete="new-password" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-secondary-500 focus:outline-none focus:ring-secondary-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
                 <label for="confirm_new_password" class="block text-sm font-medium text-gray-700">Confirm New Password <span class="text-red-600">*</span></label>
-                <input type="password" name="confirm_new_password" value="" id="confirm_new_password" autocomplete="new-password" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
+                <input type="password" name="confirm_new_password" value="" id="confirm_new_password" autocomplete="new-password" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-secondary-500 focus:outline-none focus:ring-secondary-500 sm:text-sm" />
               </div>
             </div>
           </div>
 
           <div class="divide-y divide-gray-200 pt-6">
             <div class="mt-4 flex justify-end py-4 px-4 sm:px-6">
-              <a href="/contacts/<%= user.username %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Cancel</a>
-              <button type="submit" class="ml-5 inline-flex justify-center rounded-md border border-transparent bg-indigo-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Save</button>
+              <a href="/contacts/<%= user.username %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-secondary-500 focus:ring-offset-2">Cancel</a>
+              <button type="submit" class="ml-5 inline-flex justify-center rounded-md border border-transparent bg-secondary-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-secondary-800 focus:outline-none focus:ring-2 focus:ring-secondary-500 focus:ring-offset-2">Save</button>
             </div>
           </div>
         </form>
