--- a/view/includes/searchBar.ejs
+++ b/view/includes/searchBar.ejs
@@ -1,9 +1,11 @@
 <form action="/contacts" method="GET" class="flex px-8 sm:max-w-5xl my-4 sm:mx-auto">
   <div class="mt-1 flex rounded-md shadow-sm w-full">
-    <select name="sort" id="sort" class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-50 px-3 text-gray-700 sm:text-sm">
+    <select name="sort" id="sort" class="inline-flex items-center rounded-l-md border border-r-1 border-gray-300 bg-gray-50 px-1 lg:pl-3 lg:pr-7 text-gray-700 sm:text-sm">
       <option value="">Sort</option>
-      <option value="-1">Newer profiles first</option>
-      <option value="1">Older profiles first</option>
+      <option class="lg:hidden" value="-1">Newer first</option>
+      <option class="hidden lg:block" value="-1">Newer profiles first</option>
+      <option class="lg:hidden" value="1">Older first</option>
+      <option class="hidden lg:block" value="1">Older profiles first</option>
     </select>
     <input placeholder="Search classmates" name="q" type="search" id="search" autocomplete="search" class="block w-full min-w-0 border-l-0 flex-grow rounded-none border-gray-300 focus:border-secondary-500 focus:ring-secondary-500 sm:text-sm" />
     <button class="bg-primary-700 px-3 cursor-pointer py-1 text-white font-bold rounded-tr-lg rounded-br-lg">Search</button>
