--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -5,12 +5,16 @@
     <!-- Page header -->
     <div class="mx-auto max-w-3xl px-4 sm:px-6 md:flex md:items-center md:justify-between md:space-x-5 lg:max-w-7xl lg:px-8">
       <div class="flex items-center space-x-5">
-        <div class="flex-shrink-0">
-          <div class="relative overflow-hidden rounded-full block">
-            <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `https://robohash.org/${encodeURIComponent(profile.firstName)}.png`) %>" class="h-16 w-16 rounded-full from-secondary-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
-            <span class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></span>
-          </div>
+        <div id="desktop-container" class="relative overflow-hidden rounded-full">
+          <% profilePhoto = `https://robohash.org/${profile.firstName}.png` %>
+          <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : profilePhoto) %>" class="relative h-16 w-16 rounded-full from-secondary-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+
+          <button id="preview-button"  data-image="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : profilePhoto) %>" class="absolute inset-0 flex h-full w-full items-center justify-center bg-black bg-opacity-75 text-sm font-medium text-white opacity-0 focus-within:opacity-100 hover:opacity-100">
+            <span>Zoom</span>
+            <span class="sr-only">user photo</span>
+          </button>
         </div>
+
         <div>
           <h1 class="text-2xl font-bold text-gray-900"><%= profile.firstName %> <%= profile.lastName %></h1>
           <p class="text-sm font-medium text-gray-600">Graduated <datetime datetime="<%= new Date(profile.year) %>" class="text-gray-900"><%= profile.year %></datetime></p>
