--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -51,7 +51,7 @@
     <link type="text/css" href="/tailwindcss/output.css" rel="stylesheet" />
   </head>
 
-  <header class="bg-green-700 text-xs text-white">
+  <header class="bg-primary-700 text-xs text-white">
     <div class="relative bg-white shadow">
       <div class="mx-auto max-w-7xl px-4 sm:px-6">
         <div class="flex items-center justify-between py-6 md:justify-start md:space-x-10">
@@ -64,7 +64,7 @@
             </a>
           </div>
           <div class="-my-2 -mr-2 md:hidden">
-            <button id="open-mobile-menu" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-green-500" aria-expanded="false">
+            <button id="open-mobile-menu" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500" aria-expanded="false">
               <span class="sr-only">Open menu</span>
               <!-- Heroicon name: outline/bars-3 -->
               <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -82,12 +82,12 @@
 
             <form action="/logout" method="POST" class="flex flex-wrap">
               <label for="logout">
-                <input id="logout" value="Logout" type="submit" class="cursor-pointer ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border  bg-green-700 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-green-700" />
+                <input id="logout" value="Logout" type="submit" class="cursor-pointer ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border  bg-primary-700 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-primary-700" />
               </label>
             </form>
             <% } else { %>
             <a href="/login" class="whitespace-nowrap text-base font-medium text-gray-700 hover:text-gray-900">Login</a>
-            <a href="/register" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border  bg-green-700 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-green-700">Add Your Contact</a>
+            <a href="/register" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border  bg-primary-700 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-primary-700">Add Your Contact</a>
             <% } %>
           </div>
         </div>
@@ -104,7 +104,7 @@
               <span class="sr-only">Gwarinpa Contact Book</span>
             </div>
             <div class="-mr-2">
-              <button id="close-mobile-menu" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+              <button id="close-mobile-menu" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-secondary-500">
                 <span class="sr-only">Close menu</span>
                 <!-- Heroicon name: outline/x-mark -->
                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -120,14 +120,14 @@
               <a href="/about" class="text-base font-medium text-gray-900 hover:text-gray-700">About</a>
             </div>
 
-            <a href="/<%- user ? 'contacts/'+user.username : 'register' %>" class="flex w-full items-center justify-center rounded-md border  bg-green-700 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-green-700"><%- user ? 'Go to your profile' : 'Add Your Contact' %></a>
+            <a href="/<%- user ? 'contacts/'+user.username : 'register' %>" class="flex w-full items-center justify-center rounded-md border  bg-primary-700 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-primary-700"><%- user ? 'Go to your profile' : 'Add Your Contact' %></a>
           </div>
         </div>
       </div>
     </div>
   </header>
 
-  <body class="bg-green-100 h-full">
+  <body class="bg-primary-100 h-full">
     <a id="skip-nav" class="screenreader-text" href="#main-content"> Skip to Main Content </a>
     <div id="main-content">
       <!-- BODY  -->
