--- a/view/contacts.ejs
+++ b/view/contacts.ejs
@@ -5,13 +5,13 @@
 <%- include('includes/flash') %>
 <!-- ERROR FLASH MESSAGE END-->
 
-<%- include('includes/searchBar') %> <%- include('includes/sort') %>
+<%- include('includes/searchBar') %>
 <div id="anchor-tag" class="flex flex-wrap justify-center my-12">
   <div class="mx-auto max-w-7xl px-4 text-center sm:px-6 lg:px-8">
     <div class="space-y-12">
       <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
         <h1 class="text-3xl font-bold tracking-tight sm:text-4xl">Discover Present & Past GSS Gwarinpa Students</h1>
-        <p class="text-xl text-gray-600">Project by GSS Gwarinpa class of 2006. <a class="text-green-700 hover:underline" href="<%= user ? '/contacts/'+user.username : '/register' %>"><%= user ? 'View your profile' : 'Add your contact' %></a> or search for your classmates.</p>
+        <p class="text-xl text-gray-600">Project by GSS Gwarinpa class of 2006. <a class="text-primary-700 hover:underline" href="<%= user ? '/contacts/'+user.username : '/register' %>"><%= user ? 'View your profile' : 'Add your contact' %></a> or search for your classmates.</p>
       </div>
       <ul class="mx-auto space-y-16 sm:grid sm:grid-cols-2 sm:gap-16 sm:space-y-0 lg:max-w-7xl lg:grid-cols-3 xl:grid-cols-4">
         <% if(profiles.length){ %> <% profiles.forEach(profile => { %> <%- include('includes/profile', {profile: profile}) %> <% }) %> <% } else { %>
