--- a/view/includes/searchBar.ejs
+++ b/view/includes/searchBar.ejs
@@ -1,7 +1,13 @@
-<form action="/contacts" method="GET" class="flex px-8 sm:max-w-5xl my-4 sm:mx-auto" style="position: relative">
-  <svg style="position: absolute" class="m-4 fill-current pointer-events-none text-gray-600 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-    <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"></path>
-  </svg>
-  <input name="q" type="search" placeholder="Search classmates" class="w-full bg-white shadow-md focus:outline-0 border placeholder-gray-600 rounded-tl-lg rounded-bl-lg pl-10 pr-2 py-2 block appearance-none leading-normal" />
-  <button class="bg-green-700 px-3 cursor-pointer py-1 text-white font-bold rounded-tr-lg rounded-br-lg">Search</button>
+<form action="/contacts" method="GET" class="flex px-8 sm:max-w-5xl my-4 sm:mx-auto">
+  <div class="mt-1 flex rounded-md shadow-sm w-full">
+    <select name="sort" id="sort" class="inline-flex items-center rounded-l-md border border-r-1 border-gray-300 bg-gray-50 px-1 lg:pl-3 lg:pr-7 text-gray-700 sm:text-sm">
+      <option value="">Sort</option>
+      <option class="lg:hidden" value="-1">Newer first</option>
+      <option class="hidden lg:block" value="-1">Newer profiles first</option>
+      <option class="lg:hidden" value="1">Older first</option>
+      <option class="hidden lg:block" value="1">Older profiles first</option>
+    </select>
+    <input placeholder="Search classmates" name="q" type="search" id="search" autocomplete="search" class="block w-full min-w-0 border-l-0 flex-grow rounded-none border-gray-300 focus:border-secondary-500 focus:ring-secondary-500 sm:text-sm" />
+    <button class="bg-primary-700 px-3 cursor-pointer py-1 text-white font-bold rounded-tr-lg rounded-br-lg">Search</button>
+  </div>
 </form>
