--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -5,12 +5,13 @@
     <!-- Page header -->
     <div class="mx-auto max-w-3xl px-4 sm:px-6 md:flex md:items-center md:justify-between md:space-x-5 lg:max-w-7xl lg:px-8">
       <div class="flex items-center space-x-5">
-        <div id="desktop-container" class="relative overflow-hidden rounded-full">
-          <% profilePhoto = `https://robohash.org/${profile.firstName}.png` %>
-          <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : profilePhoto) %>" class="relative h-16 w-16 rounded-full from-secondary-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+        <% profilePhoto = profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `https://robohash.org/${profile.firstName}.png`) %>
 
-          <button id="preview-button"  data-image="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : profilePhoto) %>" class="absolute inset-0 flex h-full w-full items-center justify-center bg-black bg-opacity-75 text-sm font-medium text-white opacity-0 focus-within:opacity-100 hover:opacity-100">
-            <span>Zoom</span>
+        <div class="relative overflow-hidden rounded-full">
+          <img loading="lazy" src="<%= profilePhoto %>" class="relative h-16 w-16 rounded-full from-secondary-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+
+          <button id="preview-button" data-image="<%= profilePhoto %>" class="absolute inset-0 flex h-full w-full items-center justify-center bg-black bg-opacity-75 text-sm font-medium text-white opacity-0 focus-within:opacity-100 hover:opacity-100">
+            <span class="pointer-events-none">Zoom</span>
             <span class="sr-only">user photo</span>
           </button>
         </div>
