--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -13,11 +13,8 @@
         <h1 class="text-3xl font-bold tracking-tight sm:text-4xl">Discover Present & Past GSS Gwarinpa Students</h1>
         <p class="text-xl text-gray-600">Project by GSS Gwarinpa class of 2006. <a class="text-primary-700 hover:underline" href="<%= user ? '/contacts/'+user.username : '/register' %>"><%= user ? 'View your profile' : 'Add your contact' %></a> or search for your classmates.</p>
       </div>
-      <ul class="mx-auto space-y-16 sm:grid sm:grid-cols-2 sm:gap-16 sm:space-y-0 lg:max-w-7xl lg:grid-cols-3 xl:grid-cols-4">
-        <% if(profiles.length){ %> <% profiles.forEach(profile => { %> <%- include('includes/profile', {profile: profile}) %> <% }) %> <% } else { %>
-        <p>No profile found.</p>
-        <%}%>
-      </ul>
+
+      <%- include('includes/profile', { profiles }) %>
     </div>
   </div>
 </div>
