--- a/views/about.ejs
+++ b/views/about.ejs
@@ -39,7 +39,7 @@
                   </div>
 
                   <footer class="mt-4">
-                    <p class="text-base font-semibold text-primary-200">John Wick, former GSS Gwarinpa student</p>
+                    <p class="text-base font-semibold text-primary-200">Former GSS Gwarinpa student</p>
                   </footer>
                 </blockquote>
               </div>
